package design.patten.decorator;

/**
 * desc : 组件接口
 * Created by tiantian on 2018/10/5
 */
public interface Component {
    void doSomething();
}
