package design.patten.decorator;

/**
 * desc : 抽象装饰者
 * Created by tiantian on 2018/10/5
 */
public abstract class Decorator implements Component {
}
